<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">DAVx⁵</string>
    <string name="account_invalid">Account does not exist (anymore)</string>
    <string name="account_type" translatable="false">bitfire.at.davdroid</string>
    <string name="account_type_address_book" translatable="false">at.bitfire.davdroid.address_book</string>
    <string name="account_title_address_book">DAVx⁵ Address book</string>
    <string name="account_prefs_use_app">Don\'t change the account here! Directly use the app to manage accounts instead.</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_remove">Remove</string>
    <string name="dialog_deny">Cancel</string>
    <string name="dialog_enable">Enable</string>
    <string name="field_required">This field is required</string>
    <string name="help">Help</string>
    <string name="navigate_up">Navigate up</string>
    <string name="options_menu">Options menu</string>
    <string name="share">Share</string>
    <string name="dismiss_forever">Dismiss forever</string>
    <string name="sync_started">Synchronization started/enqueued</string>
    <string name="database_destructive_migration_title">Database corrupted</string>
    <string name="database_destructive_migration_text">All accounts have been removed locally.</string>
    <string name="notification_channel_debugging">Debugging</string>
    <string name="notification_channel_general">Other important messages</string>
    <string name="notification_channel_status">Low-priority status messages</string>
    <string name="notification_channel_sync">Synchronization</string>
    <string name="notification_channel_sync_errors">Synchronization errors</string>
    <string name="notification_channel_sync_errors_desc">Important errors which stop synchronization like unexpected server replies</string>
    <string name="notification_channel_sync_warnings">Synchronization warnings</string>
    <string name="notification_channel_sync_warnings_desc">Non-fatal synchronization problems like certain invalid files</string>
    <string name="notification_channel_sync_io_errors">Network and I/O errors</string>
    <string name="notification_channel_sync_io_errors_desc">Timeouts, connection problems, etc. (often temporary)</string>
    <string name="notification_channel_user_interaction">User Interaction</string>
    <string name="notification_channel_user_interaction_desc">User interaction required. A problem or issue has to be addressed manually.</string>
    <string name="intro_slogan1">Your data. Your choice.</string>
    <string name="intro_slogan2">Take control.</string>
    <string name="intro_battery_title">Regular sync intervals</string>
    <string name="intro_battery_text">For synchronization at regular intervals, %s must be allowed to run in the background. Otherwise, Android may pause synchronization at any time.</string>
    <string name="intro_battery_dont_show">I don\'t need regular sync intervals.*</string>
    <string name="intro_leave_unchecked">* Leave unchecked to be reminded later. Can be reset in app settings / %s.</string>
    <string name="intro_more_info">More information</string>
    <string name="intro_tasks_jtx">jtx Board</string>
    <string name="intro_tasks_jtx_info"><![CDATA[Supports sync of Tasks, Journals and Notes.]]></string>
    <string name="intro_tasks_title">Tasks support</string>
    <string name="intro_tasks_text1">If tasks are supported by your server, they can be synchronized with a supported tasks app:</string>
    <string name="intro_tasks_opentasks">OpenTasks</string>
    <string name="intro_tasks_opentasks_info">Doesn\'t seem to be developed anymore – not recommended.</string>
    <string name="intro_tasks_tasks_org">Tasks.org</string>
    <string name="intro_tasks_tasks_org_info"><![CDATA[Some features <a href="https://www.davx5.com/faq/tasks/advanced-task-features">are not supported</a>.]]></string>
    <string name="intro_tasks_no_app_store">No app store available</string>
    <string name="intro_tasks_dont_show">I don\'t need tasks support.*</string>
    <string name="intro_backups_title">Backups reminder</string>
    <string name="intro_backups_important">It\'s important to back up your data (including contacts and calendars) regularly to prevent potential data loss.</string>
    <string name="intro_backups_something_wrong">Something can always go wrong, whether on the server, within %s, or in other apps, which for instance might accidentally delete all calendar entries. (The deletions would then be synchronized to the server.)</string>
    <string name="intro_backups_accept">I already have a working backup strategy or I don\'t need one.</string>
    <string name="intro_open_source_title">Open-source software</string>
    <string name="intro_open_source_text">We\'re happy that you use %s, which is open-source software. Development, maintenance and support are hard work. Please consider contributing (there are many ways) or a donation. It would be highly appreciated!</string>
    <string name="intro_open_source_details">How to contribute/donate</string>
    <string name="intro_open_source_dont_show">Don\'t remind me for</string>
    <plurals name="intro_open_source_dont_show_months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <string name="intro_next">Next</string>
    <string name="permissions_title">Permissions</string>
    <string name="permissions_text">%s requires permissions to work properly.</string>
    <string name="permissions_all_title">All of the below</string>
    <string name="permissions_all_status_off">Use this to enable all features (recommended)</string>
    <string name="permissions_all_status_on">All permissions granted</string>
    <string name="permissions_contacts_title">Contacts permissions</string>
    <string name="permissions_contacts_status_off">No contact sync (not recommended)</string>
    <string name="permissions_contacts_status_on">Contact sync possible</string>
    <string name="permissions_calendar_title">Calendar permissions</string>
    <string name="permissions_calendar_status_off">No calendar sync (not recommended)</string>
    <string name="permissions_calendar_status_on">Calendar sync possible</string>
    <string name="permissions_notification_title">Notification permission</string>
    <string name="permissions_notification_status_off">Notifications disabled (not recommended)</string>
    <string name="permissions_notification_status_on">Notifications enabled</string>
    <string name="permissions_local_network_title">Local network permission</string>
    <string name="permissions_local_network_status_off">Local network access denied</string>
    <string name="permissions_local_network_status_on">Local network access granted</string>
    <string name="permissions_jtx_title">jtx Board permissions</string>
    <string name="permissions_opentasks_title">OpenTasks permissions</string>
    <string name="permissions_tasksorg_title">Tasks permissions</string>
    <string name="permissions_tasks_status_off">No task sync</string>
    <string name="permissions_tasks_status_on">Task sync possible</string>
    <string name="permissions_autoreset_title">Keep permissions</string>
    <string name="permissions_autoreset_status_off">Permissions may be reset automatically (not recommended)</string>
    <string name="permissions_autoreset_status_on">Permissions won\'t be reset automatically</string>
    <string name="permissions_autoreset_instruction">Click Permissions > uncheck \"Remove permissions if app isn\'t used\"</string>
    <string name="permissions_app_settings_hint">If a switch doesn\'t work, use app settings / Permissions.</string>
    <string name="permissions_app_settings">App settings</string>
    <string name="wifi_permissions_label">WiFi SSID permissions</string>
    <string name="wifi_permissions_intro">To be able to access the current WiFi name (SSID), these conditions must be met:</string>
    <string name="wifi_permissions_location_permission">Precise location permission</string>
    <string name="wifi_permissions_location_permission_on">Location permission granted</string>
    <string name="wifi_permissions_location_permission_off">Location permission denied</string>
    <string name="wifi_permissions_background_location_permission">Background location permission</string>
    <string name="wifi_permissions_background_location_permission_label">Allow all the time</string>
    <string name="wifi_permissions_background_location_permission_on">Location permission set to: %s</string>
    <string name="wifi_permissions_background_location_permission_off">Location permission not set to: %s</string>
    <string name="wifi_permissions_background_location_disclaimer">%s uses location data (only WiFi SSID) solely to restrict synchronization to a specific WiFi SSID. This will happen even when the synchronization runs in background.</string>
    <string name="wifi_permissions_background_location_disclaimer2">All location data (only WiFi SSID) are only used locally and are not sent anywhere.</string>
    <string name="wifi_permissions_location_enabled">Location always enabled</string>
    <string name="wifi_permissions_location_enabled_on">Location service is enabled</string>
    <string name="wifi_permissions_location_enabled_off">Location service is disabled</string>
    <string name="about_translations">Translations</string>
    <string name="about_translations_thanks">❤️ Thanks to all who have contributed translations!</string>
    <string name="about_translations_over_transifex">Over Transifex</string>
    <string name="about_translations_over_weblate">Over Weblate</string>
    <string name="about_translations_contribute">Help Translating</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_version">Version %1$s (%2$d)</string>
    <string name="about_copyright">© Ricki Hirner, Bernhard Stockmann (bitfire web engineering GmbH) and contributors</string>
    <string name="about_license_info_no_warranty">This program comes with ABSOLUTELY NO WARRANTY. It is free software, and you are welcome to redistribute it under certain conditions.</string>
    <string name="logging_couldnt_create_file">Couldn\'t create log file</string>
    <string name="logging_notification_text">Now logging all %s activities</string>
    <string name="logging_notification_view_share">View/share</string>
    <string name="logging_notification_disable">Disable</string>
    <string name="navigation_drawer_subtitle">CalDAV/CardDAV Sync Adapter</string>
    <string name="navigation_drawer_about">About / License</string>
    <string name="navigation_drawer_beta_feedback">Beta feedback</string>
    <string name="install_browser">Please install a Web browser</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_news_updates">News &amp; updates</string>
    <string name="navigation_drawer_tools">Tools</string>
    <string name="navigation_drawer_external_links">External links</string>
    <string name="navigation_drawer_website">Web site</string>
    <string name="navigation_drawer_manual">Manual</string>
    <string name="navigation_drawer_faq">FAQ</string>
    <string name="navigation_drawer_managed">For organizations</string>
    <string name="navigation_drawer_community">Community</string>
    <string name="login_login">Login</string>
    <string name="login_type_email">Login with email address</string>
    <string name="login_email_address">Email address</string>
    <string name="login_password">Password</string>
    <string name="login_type_url">Login with URL and user name</string>
    <string name="login_user_name">User name</string>
    <string name="login_base_url">Base URL</string>
    <string name="login_select_certificate">Select certificate</string>
</resources>